--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,26 @@
-/*general*/
+@import url('https://fonts.googleapis.com/css2?family=Besley:ital@1&family=Finger+Paint&family=Open+Sans&display=swap');
 
+/*general*/
 * {
     padding: 1%;
     margin: 0;
-    font-family: 'Times New Roman', Times, serif
+    font-family: 'Open Sans', 'Times new Roman', sans-serif;
 }
 
 img {
     filter: saturate(0%) sepia(20%);
+}
+
+h1 {
+    display: none;
+}
+
+h2 {
+    font-size: 2.4em;
+}
+
+h3 {
+    font-size: 1.5em;
 }
 
 /*header*/
@@ -22,14 +35,12 @@ img {
 
 header {
     position: sticky;
-    top: 0;
+    top: 80;
     background-color: rgb(255, 255, 255, 0.5);
     z-index: 10;
 }
 
-h1 {
-    display: none;
-}
+
 
 header img {
     width: 40%;
@@ -39,6 +50,9 @@ header img {
 }
 
 /* navbar */
+ul {
+    text-align: center;
+}
 .navList {
     display: inline;
     text-transform: capitalize;
@@ -53,4 +67,94 @@ header img {
 }
 .navList:hover {
     background-color: gainsboro;
+}
+
+/* principal */
+
+.principal {
+    display: flex;
+    padding: 3%;
+    justify-content: space-between;
+}
+
+/* news */
+
+main {
+    width: 60%%;
+}
+
+main .reporterName {
+    font-family: 'Besley', serif;
+}
+
+main .photo {
+    max-width: 800px;
+}
+
+.newsContent {
+    display: flex;
+}
+
+main .newsContent p {
+    padding: 0 1%;
+    text-align: justify;
+}
+
+/* aside */
+
+aside {
+    width: 30%;
+    border-left: 2px solid black;
+}
+
+aside .ads{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+aside img{
+    width: 90%;
+}
+
+/* form */
+
+.suscribe {
+    margin: auto;
+    border-top: 3px solid black;
+    background-color: rgb(221, 221, 221);
+    padding: 2% 0 2% 10%;
+    box-shadow: 2px 2px 2px 1px rgba(2, 2, 2, 0315);
+    margin-bottom: 3%;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+form label.userInfo {
+    justify-content: space-between;
+    display: flex;
+    box-sizing: border-box;
+    width: 80%;
+}
+
+form input,
+form select {
+    padding: 12px 20px;
+    width: 80%;
+}
+
+form label.userType {
+    width: 25%;
+}
+
+form button {
+    width: 20%;
+    text-align: center;
+    padding: 12px 20px;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 6px rgba(2, 2, 2, 0.315);
 }
